apps/system/observability/alloy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alloy
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
